--- a/app/views/wellcome/index.html.erb
+++ b/app/views/wellcome/index.html.erb
@@ -6,3 +6,5 @@ to continue please
 	<%= link_to "Sign in", new_user_session_path %>
 	<%= link_to "Sign up", new_user_registration_path %>
 <% end %>
+
+<%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
